# GlassSurf

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTE.md  LICENSE  README.md  first.7z
app/: CMakeLists.txt  CMakeUserPresets.json  build.sh  conanfile.txt  install-deps.bat
app/resources/: VersionInfo.rc
app/src/: arguments.cpp  arguments.h  image_utilities.cpp  image_utilities.h  main.cpp  pch.h  restapi_listener.cpp  restapi_listener.h
app/src/preferences/: listener.cpp  listener.h
app/src/settings/: settings_manager.cpp  settings_manager.h
app/src/win/: process_detector.cpp  process_detector.h  window_utilities.cpp  window_utilities.h
app/src/windows/: background_image.cpp  background_image.h  image_utilities.cpp  image_utilities.h  pch.h  process_detector.cpp  process_detector.h  window_utilities.cpp  window_utilities.h
app/tools/: cprgen.py  linker.py  rmv.py
extension/: manifest.json
extension/scripts/: content.js
extension/src/: manifest.json  merge.py  package-lock.json  package.json
